data/derived/comb/progs/unify/prog6573.ml.out
Characters 54-55:
  |_-> (clone (x,n-1))::x;;
               ^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a * 'b
